finished hangman as far as I can be bothered to take it

--- a/Hangman - angus.ipynb
+++ b/Hangman - angus.ipynb
@@ -2,154 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f8ac62aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "fc984c3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "with open(\"./wordlist.txt\") as wordslist:\n",
-    "    words = wordslist.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "33c919ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    words = wordslist.readlines()\n",
     "new_words = []\n",
     "\n",
     "for word in words:\n",
     "    fixed_word = word.strip(\"\\n\")\n",
-    "    new_words.append(fixed_word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "3917d95d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "game_word = np.random.choice(new_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "d44301a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'unavoidable'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "game_word"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "97d89362",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['u', 'n', 'a', 'v', 'o', 'i', 'd', 'a', 'b', 'l', 'e']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(game_word)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "20882ad3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_word = [\"_\" for x in game_word]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "c5494f0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user_word"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "a7a326d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you lost a life!\n",
-      "you lost a life!\n",
-      "you lost a life!\n",
-      "you lost a life!\n",
-      "you lost a life!\n"
-     ]
-    }
-   ],
-   "source": [
+    "    new_words.append(fixed_word)\n",
+    "game_word = np.random.choice(new_words)\n",
+    "game_word\n",
+    "user_word = [\"_\" for x in game_word]\n",
+    "user_word\n",
     "lives = 5\n",
     "\n",
     "while \"_\" in user_word and lives > 0:\n",
     "    user_guess = input(f\"welcome to Hangman!\\nYou have {lives} lives\\nThis is your word {user_word}.\\nPlease make a guess:\\n\")\n",
-    "    if user_guess.lower() in game_word:\n",
+    "    if user_guess in user_word:\n",
+    "        print(\"you already guessed that letter\")\n",
+    "    elif user_guess.lower() in game_word:\n",
     "        locs = [index for index, letter in enumerate(list(game_word)) if user_guess == letter]\n",
     "        for loc in locs: \n",
     "            user_word[loc] = user_guess\n",
     "    else:\n",
     "        print(\"you lost a life!\")\n",
     "        lives -= 1\n",
-    "        user_guess = input(f\"welcome to Hangman!\\nYou have {lives} lives\\nThis is your word {user_word}.\\nPlease make a guess:\\n\")"
+    "        user_guess = input(f\"welcome to Hangman!\\nYou have {lives} lives.\\nThis is your word {user_word}.\\nPlease make a guess:\\n\")\n",
+    "\n",
+    "if \"_\" not in user_word:\n",
+    "    print(\"Nice one, you won!\\nYou are so cool.\")\n",
+    "elif lives == 0:\n",
+    "    print(\"wtf, that was terrible, you must be Sam?\")\n",
+    "else:\n",
+    "    print(\"something has gone wrong\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c2b03b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
