Seans amazing change

--- a/Club Hangman.ipynb
+++ b/Club Hangman.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "letter = input(\"Make a guess\")\n",
+    "letter = input(\"Pick a letter\")\n",
     "if letter in hangman:\n",
     "    print(letter,end='')\n",
     "else:\n",
