--- a/Hangman - angus.ipynb
+++ b/Hangman - angus.ipynb
@@ -39,7 +39,9 @@
     "elif lives == 0:\n",
     "    print(\"wtf, that was terrible, you must be Sam?\")\n",
     "else:\n",
-    "    print(\"something has gone wrong\")"
+    "    print(\"something has gone wrong\")\n",
+    "    \n",
+    "This is my change."
    ]
   },
   {
@@ -53,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -67,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
